--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,13 @@
     </ul>
   </div>
 </nav>
-    <h1>Hello, world!</h1>
+    <div class="container-fluid">
+      <div class="row">
+          <h1 class="pageheader Hello" align="center"> Hello Everyone </h1>
+
+
+      </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
