--- a/public/insert_table.html
+++ b/public/insert_table.html
@@ -31,16 +31,34 @@
 </nav>
     <div class="container-fluid">
       <div class="row">
-          <h1 class="pageheader Hello" align="center"> Hello Everyone </h1>
+          <h1 class="pageheader Hello" align="center"> Add New Book</h1>
       </div>
     </div>
     <form>
       <div class="form-row">
         <div class="col">
-          <input type="text" class="form-control" placeholder="First name">
+          <input type="text" class="form-control" placeholder="Book Title">
         </div>
         <div class="col">
-          <input type="text" class="form-control" placeholder="Last name">
+          <input type="text" class="form-control" placeholder="Author">
+        </div>
+      </div>
+      <br>
+      <div class="form-row">
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Year Published">
+        </div>
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Publisher">
+        </div>
+      </div>
+      <br>
+      <div class="form-row">
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Page Count">
+        </div>
+        <div class="col">
+          <input type="text" class="form-control" placeholder="MSRP">
         </div>
       </div>
     </form>
