--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Book Table</a>
@@ -31,7 +31,24 @@
 </nav>
     <div class="container-fluid">
       <div class="row">
-          <h1 class="pageheader Hello" align="center"> Hello Everyone </h1>
+          <h1 class="" align="center"> Get to know the fake me</h1>
+      </div>
+    </div>
+    <div class = "container-fluid">
+      <div class = "row">
+        <br>
+        <br>
+        <div>
+            <h1 class="" align="center">Tyler Fournette</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div>
+            <h1 class="" align="center">Born 1776</h1>
+        </div>
+        <div>
+            <h2 class="" align="center"></h2>
+        </div>
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
