--- a/public/index.html
+++ b/public/index.html
@@ -10,47 +10,57 @@
     <title>Home Page</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-  <a class="navbar-brand" href="#">Introductions</a>
+    <nav class="navbar navbar-expand-lg navbar-custom navbar-fixed-top">
+  <a class="navbar-brand navbar-custom" href="index.html">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link navbar-custom" href="table.html">Book Table</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Book Table</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Add Book Form</a>
+        <a class="nav-link navbar-custom" href="insert_table.html">Add Book Form</a>
       </li>
     </ul>
   </div>
 </nav>
+<main>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4"><img src="img/Brad-Pitt.jpg" alt="BossMan" class="imageclass">BossMan Pitt</h1>
+      </div>
+    </div>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <p class="lead">Origin: Mars</p>
+        <p class="lead">Born: March 27th, 1604</p>
+        <p class="lead">Age: 416</p>
+      </div>
+    </div>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h3 class="display-4">About Me</h3>
+        <p class="lead">Charismatic and energetic. Enjoy the fine arts and swordfish.Always wanted to skydive!</p>
+      </div>
+    </div>
+  </main>
+  <footer class="footer navbar-fixed-bottom">
     <div class="container-fluid">
-      <div class="row">
-          <h1 class="" align="center"> Get to know the fake me</h1>
-      </div>
+    <div class="row">
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><h4>Contact Info</h4><hr>
+        <p><a class="email" href="aa">Email: bossman123@gmail.com</a></p>
+        </div>
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+
+        </div>
+    <div clas="col-xs-4 col-sm-4 col-md-4 col-lg-4"><h4>Location</h4><hr>
+        <p>Apartment 4650</p>
+        </div>
     </div>
-    <div class = "container-fluid">
-      <div class = "row">
-        <br>
-        <br>
-        <div>
-            <h1 class="" align="center">Tyler Fournette</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div>
-            <h1 class="" align="center">Born 1776</h1>
-        </div>
-        <div>
-            <h2 class="" align="center"></h2>
-        </div>
-      </div>
     </div>
+  </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
