--- a/public/insert_table.html
+++ b/public/insert_table.html
@@ -18,20 +18,22 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Book Table</a>
+        <a class="nav-link" href="table.html">Book Table</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Add Book Form</a>
+        <a class="nav-link" href="insert_table.html">Add Book Form</a>
       </li>
     </ul>
   </div>
 </nav>
     <div class="container-fluid">
       <div class="row">
-          <h1 class="pageheader Hello" align="center"> Add New Book</h1>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <h1 class="pageheader Hello" align="center"> Add New Book</h1>
+        </div>
       </div>
     </div>
     <form>
@@ -46,7 +48,7 @@
       <br>
       <div class="form-row">
         <div class="col">
-          <input type="text" class="form-control" placeholder="Year Published">
+          <input type="number" class="form-control" placeholder="Year Published">
         </div>
         <div class="col">
           <input type="text" class="form-control" placeholder="Publisher">
@@ -55,12 +57,16 @@
       <br>
       <div class="form-row">
         <div class="col">
-          <input type="text" class="form-control" placeholder="Page Count">
+          <input type="number" class="form-control" placeholder="Page Count">
         </div>
         <div class="col">
-          <input type="text" class="form-control" placeholder="MSRP">
+          <input type="number" class="form-control" placeholder="MSRP">
         </div>
       </div>
+      <br>
+      <div class="col-auto">
+      <button type="submit" class="btn btn-primary mb-2 center">Submit</button>
+    </div>
     </form>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
