--- a/public/table.html
+++ b/public/table.html
@@ -14,45 +14,81 @@
     <title>Home Page</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-  <a class="navbar-brand" href="#">Introductions</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark navbar-fixed-top">
+  <a class="navbar-brand" href="index.html">Introductions</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Book Table</a>
+        <a class="nav-link" href="table.html">Book Table</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Add Book Form</a>
+        <a class="nav-link" href="insert_table.html">Add Book Form</a>
       </li>
     </ul>
   </div>
 </nav>
-    <div class="container-fluid">
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
       <div class="row">
-          <h1 class="pageheader Hello" align="center"> Hello Everyone </h1>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <h1 class="pageheader" align="center"> Enjoy Your Next Read</h1>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <h1><img src="img/quote.jpg"alt="Dr. Seuss" class="center"></h1>
+        </div>
       </div>
     </div>
+    </div>
+
     <table style="width:100%">
       <tr>
-        <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Age</th>
+        <th>Book Title</th>
+        <th>Author/s</th>
+        <th>Year Published</th>
+        <th>Publisher</th>
+        <th>Page Count</th>
+        <th>MSRP</th>
       </tr>
       <tr>
-        <td>Jill</td>
-        <td>Smith</td>
-        <td>50</td>
+        <td>How to succeed</td>
+        <td>Brian Moore</td>
+        <td>1998</td>
+        <td>Brookstone</td>
+        <td>200</td>
+        <td>25.87</td>
       </tr>
       <tr>
-        <td>Eve</td>
-        <td>Jackson</td>
-        <td>94</td>
+        <td>Make Friends</td>
+        <td>Justin Voore</td>
+        <td>2017</td>
+        <td>Kaiser Publishing</td>
+        <td>123</td>
+        <td>16.73</td>
+      </tr>
+      <tr>
+        <td>What is MSIS?</td>
+        <td>Dorothy Miller</td>
+        <td>2019</td>
+        <td>Indiana University</td>
+        <td>5000</td>
+        <td>300.67</td>
+      </tr>
+      <tr>
+        <td>Recruiting 101</td>
+        <td>Nike matrix</td>
+        <td>2020</td>
+        <td>Who Cares Industry</td>
+        <td>10</td>
+        <td>5.01</td>
       </tr>
     </table>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
