--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         <a class="nav-link navbar-custom" href="table.html">Book Table</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link navbar-custom" href="insert_table.html">Add Book Form</a>
+        <a class="nav-link navbar-custom" href="AddBook.html">Add Book Form</a>
       </li>
     </ul>
   </div>
