--- a/public/table.html
+++ b/public/table.html
@@ -14,25 +14,23 @@
     <title>Home Page</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark navbar-fixed-top">
-  <a class="navbar-brand" href="index.html">Introductions</a>
+    <nav class="navbar navbar-expand-lg navbar-custom navbar-fixed-top">
+  <a class="navbar-brand navbar-custom" href="index.html">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link navbar-custom" href="table.html">Book Table</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="table.html">Book Table</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="insert_table.html">Add Book Form</a>
+        <a class="nav-link navbar-custom" href="AddBook.html">Add Book Form</a>
       </li>
     </ul>
   </div>
-</nav>
+  </nav>
+<main>
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <div class="row">
@@ -48,7 +46,7 @@
       </div>
     </div>
     </div>
-
+    <div class="jumbotron jumbotron-fluid">
     <table style="width:100%">
       <tr>
         <th>Book Title</th>
@@ -91,6 +89,23 @@
         <td>5.01</td>
       </tr>
     </table>
+  </div>
+  </main>
+  <footer class="footer navbar-fixed-bottom">
+    <div class="container-fluid">
+    <div class="row">
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><h4>Contact Info</h4><hr>
+        <p><a class="email" href="aa">Email: bossman123@gmail.com</a></p>
+        </div>
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+
+        </div>
+    <div clas="col-xs-4 col-sm-4 col-md-4 col-lg-4"><h4>Location</h4><hr>
+        <p>Apartment 4650</p>
+        </div>
+    </div>
+    </div>
+  </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
